--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^0.28.4",
     "file-loader": "^0.11.2",
     "json-loader": "^0.5.4",
+    "react-hot-loader": "^1.3.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^2.6.1",
